need to check equations

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
-PROJECT(bio-ph)
+PROJECT(biosystems)
 SET(YROOT "$ENV{HOME}/program/yocto4/sdk" )
 
 SET(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/..)
