--- a/src/lithium/CMakeLists.txt
+++ b/src/lithium/CMakeLists.txt
@@ -1,1 +1,4 @@
+ADD_EXECUTABLE(transient transient.cpp transient.lua)
+TARGET_LINK_YOCTO(transient mk lua++ lua)
 
+INSTALL( TARGETS transient RUNTIME DESTINATION bin )
