--- a/src/lithium/CMakeLists.txt
+++ b/src/lithium/CMakeLists.txt
@@ -1,4 +1,8 @@
 ADD_EXECUTABLE(transient transient.cpp transient.lua)
-TARGET_LINK_YOCTO(transient mk lua++ lua)
+TARGET_LINK_YOCTO(transient mk lua++)
 
-INSTALL( TARGETS transient RUNTIME DESTINATION bin )
+ADD_EXECUTABLE(diff_v1 diff_v1.cpp)
+TARGET_LINK_YOCTO(diff_v1 mk)
+
+
+INSTALL( TARGETS transient diff_v1 RUNTIME DESTINATION bin )
