--- a/src/lithium/doc/makefile
+++ b/src/lithium/doc/makefile
@@ -1,5 +1,6 @@
 all:
 
 clean:
-	@rm -f *.aux *.log *.synctex.gz lithium.pdf
+	@rm -f *.aux *.log *.synctex.gz lithium.pdf lithium2.pdf lithium3.pdf
+
 
