cleanup, but need to change normalisation

--- a/src/lithium/CMakeLists.txt
+++ b/src/lithium/CMakeLists.txt
@@ -1,3 +1,5 @@
+IF(FALSE)
+
 ADD_EXECUTABLE(transient transient.cpp transient.lua)
 TARGET_LINK_YOCTO(transient mk lua++)
 
@@ -7,5 +9,9 @@ TARGET_LINK_YOCTO(diff_v1 mk)
 ADD_EXECUTABLE(eval_diff eval_diff.cpp)
 TARGET_LINK_YOCTO(eval_diff mk)
 
+ENDIF()
 
-INSTALL( TARGETS transient eval_diff diff_v1 RUNTIME DESTINATION bin )
+ADD_EXECUTABLE(sim8 sim8.cpp)
+TARGET_LINK_YOCTO(sim8 mk)
+
+INSTALL( TARGETS sim8  RUNTIME DESTINATION bin )
