--- a/src/fish/CMakeLists.txt
+++ b/src/fish/CMakeLists.txt
@@ -7,3 +7,4 @@ INCLUDE_DIRECTORIES(${MEDIUM_PATH})
 
 ADD_EXECUTABLE(test-medium test-medium.cpp ${MEDIUM_SRCS})
 TARGET_LINK_YOCTO(test-medium)
+INSTALL( TARGETS test-medium RUNTIME DESTINATION bin )
