--- a/src/lithium/CMakeLists.txt
+++ b/src/lithium/CMakeLists.txt
@@ -4,3 +4,9 @@ TARGET_LINK_YOCTO(fit_v1 mk)
 
 
 INSTALL( TARGETS fit_v1 RUNTIME DESTINATION bin )
+
+ADD_EXECUTABLE(fit_intra fit_intra.cpp)
+TARGET_LINK_YOCTO(fit_intra mk)
+
+
+INSTALL( TARGETS fit_intra RUNTIME DESTINATION bin )
