--- a/src/lithium/CMakeLists.txt
+++ b/src/lithium/CMakeLists.txt
@@ -1,6 +1,6 @@
-#ADD_EXECUTABLE(fit_delta fit_delta.cpp config.lua)
-#TARGET_LINK_YOCTO(fit_delta mk lua++)
-#INSTALL( TARGETS fit_delta RUNTIME DESTINATION bin )
+ADD_EXECUTABLE(build-proton build-proton.cpp)
+TARGET_LINK_Y(build-proton m)
+INSTALL( TARGETS build-proton RUNTIME DESTINATION bin )
 
 #ADD_EXECUTABLE(fit_ximax fit_ximax.cpp)
 #TARGET_LINK_YOCTO(fit_ximax mk)
