--- a/src/lithium/doc/makefile
+++ b/src/lithium/doc/makefile
@@ -1,6 +1,6 @@
 all:
 
 clean:
-	@rm -f *.aux *.log *.synctex.gz lithium*.pdf *.dat
+	@rm -f *.aux *.log *.synctex.gz lithium*.pdf *.dat *.out *.toc
 
 
