updated for upsylon

--- a/src/lithium/CMakeLists.txt
+++ b/src/lithium/CMakeLists.txt
@@ -6,7 +6,7 @@ INSTALL( TARGETS linsim RUNTIME DESTINATION bin )
 
 
 ADD_EXECUTABLE(fit-hall fit-hall.cpp)
-TARGET_LINK_Y(fit-hall m lang)
+TARGET_LINK_Y(fit-hall m)
 INSTALL( TARGETS fit-hall RUNTIME DESTINATION bin )
 
 
