--- a/src/lithium/CMakeLists.txt
+++ b/src/lithium/CMakeLists.txt
@@ -10,11 +10,15 @@ TARGET_LINK_Y(fit-hall m)
 INSTALL( TARGETS fit-hall RUNTIME DESTINATION bin )
 
 
+ADD_EXECUTABLE(fullsim fullsim.cpp fcnli.hpp fullsim.lua)
+TARGET_LINK_Y(fullsim lua++ m)
+INSTALL( TARGETS fullsim RUNTIME DESTINATION bin )
+
+IF(FALSE)
+
 ADD_EXECUTABLE(li-tot li-tot.cpp)
 TARGET_LINK_Y(li-tot m)
 INSTALL( TARGETS li-tot RUNTIME DESTINATION bin )
-
-IF(FALSE)
 
 ADD_EXECUTABLE(build-proton build-proton.cpp)
 TARGET_LINK_Y(build-proton m)
