--- a/src/lithium/supmat/makefile
+++ b/src/lithium/supmat/makefile
@@ -1,4 +1,4 @@
 all:
 
 clean:
-	rm -f *.dat *.log *.aux *.out *.synctex.gz supmat.pdf *.toc
+	rm -f *.dat *.log *.aux *.out *.synctex.gz supmat.pdf *.toc coop.pdf
