--- a/src/lithium/makefile
+++ b/src/lithium/makefile
@@ -1,6 +1,6 @@
 all:
 
 clean:
-	rm -f *.dat
-	${MAKE} -C supmat clean
-	${MAKE} -C doc    clean
+	@rm -f *.dat
+	@${MAKE} -C supmat clean
+	@${MAKE} -C doc    clean
