--- a/src/lithium/supmat/makefile
+++ b/src/lithium/supmat/makefile
@@ -3,3 +3,4 @@ all:
 clean:
 	@rm -f *.aux *.log *.synctex.gz supmat*.pdf *.dat *.out *.toc
 	@$(MAKE) -C coop clean
+	find . -name '*~' | xargs rm 
